2100-09-18
   * Review and update of changes made in previous change.
   ** Rename /etc/sysconfig/init_params to /etc/sysconfig/rc.site.
   ** Move network services to /lib/services.
   ** Move init-functions to /lib/lsb.
   *** /lib/lsb is a symlink to /lib/services.
   * Create convenience symlink /etc/init.d->/etc/rc.d/init.d.
   * Add help and man pages to upup/ifdown.
   * Append /run/var/bootlog to /var/log/boot.log at the end of 
     the boot sequence.
   * Add capabiltiy to step through the boot scripts at boot time
   * Optionally allow environment variables in sysconfig directory's 
     console, network, and clock files to be placed in rc.site.
   * Add an optional FASTBOOT parameter to set /fastboot when rebooting.

2011-07-14  Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Major rewrite of all LFS scripts
   ** Move ifup/ifdown to /sbin
   ** Move functions and network services to /lib/boot
   ** Remove contrib directory
   ** Move all READ commands to functions and allow the user to specify
      HEADLESS=1 to skip READ commands
   ** Add /etc/sysconfig/init_params for adding environmental parameters
      to all functions used in bootscripts
   ** Move network configuration to /etc/sysconfig/ifconfig.*.  The 
      ifconfig files can have any extention.  Use IFACE parameter to 
      specify the target network interface within the configuration file.
   ** Adds an optional parameter, SKIPTMPCLEAN, to skip the removal of 
      files in /tmp at bootup.  Specify the variable in 
      /etc/sysconfig/init_params.

2011-05-31  DJ Lucas <dj@linuxfromscratch.org>
   * lfs/init.d/udev: Add multiple udev triggers for both subsystems and
     devices per upstream recommendation.

2011-04-19  Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * lfs/init.d/mountvirtfs: Add creation of /run/{var,lock,shm}.
   * lfs/init.d/udev: Add /dev/shm -> /run/shm symlink.

2011-04-18  Bruce Dubbs <bdubbs@linuxfromscratch.org>