@@ -7,6 +7,7 @@
 # Authors     : Alexander E. Patrakov
 #               DJ Lucas - dj@linuxfromscratch.org
 # Update      : Bruce Dubbs - bdubbs@linuxfromscratch.org
+#               Bryan Kadzban - 
 #
 # Version     : LFS 7.0
 #
@@ -44,8 +45,14 @@ case "${1}" in
          rm -f $file
       done
 
-      # Re-trigger the failed uevents in hope they will succeed now
-      /sbin/udevadm trigger --type=failed --action=add
+      # Re-trigger the uevents that may have failed, 
+      # in hope they will succeed now
+      /bin/sed -e 's/#.*$//' /etc/sysconfig/udev_retry | /bin/grep -v '^$' | \
+      while read line ; do
+         for subsystem in $line ; do
+            /sbin/udevadm trigger --subsystem-match=$subsystem --action=add
+         done
+      done
 
       # Now wait for udevd to process the uevents we triggered
       /sbin/udevadm settle
