@@ -37,6 +37,16 @@
 
 -->
     <listitem>
+      <para>2011-10-06</para>
+      <itemizedlist>
+        <listitem>
+          <para>[bryan] - Fix the udev_retry script, and add an explanation
+          for how to configure it.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>2011-10-05</para>
       <itemizedlist>
         <listitem>
